Fix styles on tablets

--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -1,7 +1,7 @@
 .navbar {
    @apply py-1 md:py-4 lg:py-5 fixed left-0 right-0 z-30 backdrop-blur-xl border-b-2 border-white/70 bg-white/70;
    &.open {
-      @apply h-[360px] sm:h-[180px] md:h-[120px];
+      @apply h-[360px] sm:h-[180px] lg:h-[120px];
    }
    .content {
       @apply container px-3 md:px-12 mx-auto flex justify-between items-center;
@@ -10,21 +10,21 @@
       @apply font-nyght uppercase text-2xl  sm:text-3xl text-text-1;
    }
    .menuBtn {
-      @apply md:hidden scale-75;
+      @apply lg:hidden scale-75;
       svg {
          @apply fill-text-2;
       }
    }
 }
 .navLinks {
-   @apply absolute md:static top-[60px] right-0 px-3 hidden md:flex flex-col sm:flex-row sm:justify-center md:justify-end items-center sm:items-center w-full gap-5 lg:gap-[16px] xl:gap-[28px] text-xl md:text-base lg:text-lg font-semibold text-text-2 sm:grid-cols-3 sm:grid-rows-2 sm:place-items-center;
+   @apply absolute lg:static top-[70px] right-0 px-3 hidden lg:flex flex-col sm:flex-row sm:justify-center lg:justify-end items-center sm:items-center w-full gap-5 lg:gap-[16px] xl:gap-[28px] text-xl lg:text-base lg:text-lg font-semibold text-text-2 sm:grid-cols-3 sm:grid-rows-2 sm:place-items-center;
    &.show {
-      @apply flex sm:grid md:flex;
+      @apply flex sm:grid lg:flex;
    }
    a {
       @apply underline-offset-4 hover:underline tracking-wide;
       & svg {
-         @apply fill-green-500/60 w-[34px] md:w-5 h-[34px] md:h-5 bg-white/60 md:bg-transparent rounded-full p-[6px] md:p-0;
+         @apply fill-green-500/60 w-[34px] lg:w-5 h-[34px] lg:h-5 bg-white/60 lg:bg-transparent rounded-full p-[6px] lg:p-0;
       }
       &.active {
          @apply text-text-1;
